test node 4, 6, and 7, add travis and coveralls

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,6 @@
 {
   "presets": [
-    ["env", {
-      "node": 4
-    }]
+    ["env", { "node": true }]
   ],
   "plugins": [
     "transform-async-generator-functions"
