--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint *.js test/",
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "keywords": [],
   "author": "Dieter Luypaert <dieterluypaert@icloud.com>",
@@ -14,12 +15,12 @@
     "mongodb": "^2.0.0"
   },
   "devDependencies": {
-    "babel-cli": "~6.23.0",
     "babel-eslint": "~7.1.1",
     "babel-jest": "~19.0.0",
     "babel-plugin-transform-async-generator-functions": "~6.22.0",
     "babel-polyfill": "~6.23.0",
     "babel-preset-env": "~1.1.10",
+    "coveralls": "~2.11.16",
     "eslint": "~3.16.1",
     "eslint-config-muriki": "~8.4.0",
     "eslint-plugin-import": "~2.2.0",
