--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "mongodb": "^2.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.0",
+    "babel-eslint": "~8.0.1",
     "babel-jest": "~19.0.0",
-    "babel-plugin-transform-async-generator-functions": "~6.22.0",
-    "babel-polyfill": "~6.23.0",
+    "babel-plugin-transform-async-generator-functions": "~6.24.1",
+    "babel-polyfill": "~6.26.0",
     "babel-preset-env": "^1.2.2",
-    "eslint": "^3.18.0",
-    "eslint-config-muriki": "^8.5.4",
-    "eslint-plugin-import": "~2.2.0",
-    "eslint-plugin-jasmine": "~2.2.0",
-    "eslint-plugin-node": "^4.2.1",
+    "eslint": "~4.9.0",
+    "eslint-config-muriki": "~9.1.0",
+    "eslint-plugin-import": "~2.7.0",
+    "eslint-plugin-jasmine": "~2.9.1",
+    "eslint-plugin-node": "~5.2.0",
     "jest": "~19.0.2",
     "mongodb": "^2.2.24"
   }
