Create build for Node.js v4 and update README

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": [
-    ["env", { "node": true }]
+    ["env", {
+      "targets": {
+        "node": 4
+      }
+    }]
   ],
   "plugins": [
     "transform-async-generator-functions"
