--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "Dieter Luypaert <dieterluypaert@icloud.com>",
   "license": "MIT",
   "repository": "git@github.com:Moeriki/mongo-iterable-cursor.git",
-  "main": "index.js",
+  "main": "build.js",
+  "main:jsnext": "index.js",
   "scripts": {
-    "lint": "eslint --cache *.js test/",
+    "build": "babel index.js -o build.js",
+    "lint": "eslint --cache index.js test/",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "register-toggle": "^2.1.0"
@@ -24,6 +27,7 @@
     "mongodb": "^2.0.0"
   },
   "devDependencies": {
+    "babel-cli": "~6.26.0",
     "babel-eslint": "~8.0.1",
     "babel-jest": "~19.0.0",
     "babel-plugin-transform-async-generator-functions": "~6.24.1",
