--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongo-iterable-cursor",
-  "version": "1.1.0-beta.1",
+  "version": "2.0.0",
   "description": "Turn your mongodb cursor into an async iterable",
   "keywords": [
     "async",
