--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "mongodb": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "~6.0.1",
-    "eslint-config-airbnb-base": "~13.2.0",
-    "eslint-config-prettier": "~6.0.0",
-    "eslint-plugin-import": "~2.18.0",
-    "eslint-plugin-prettier": "~3.1.0",
-    "jest": "~24.8.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "jest": "^24.8.0",
     "mongodb": "^2.2.36",
     "prettier": "~1.18.2"
   },
